--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-   <head>
-     <title>Demo webpage!</title>
-   </head>
-   <body>
-      <a href="css_demo.html">This is a link to the demo file</a> 
-     <h1>Demo for my HCI class</h1>
-     <p>This is a sample web page that links github to heroku for pure Awesomeness</p>
-     <h4>Sai Ravi</h4>
-   </body>
+	<head>
+		<title>Demo for Interactive Tech Class</title>
+	</head>
+	<body>
+		<h1>Demo for Interactive Tech Class</h1>
+		<h2>This is a sample web page that links github to heroku for pure Awesomeness</h2>
+		<p><a href="css_demo.html">This is a link to the demo file</a></p>
+		<p><a href="font-sample.html">This is a link to the font-sample file</a></p>
+		<p><a href="bootstrap-sample.html">This is a link to the bootstrap-sample file</a></p>
+		<h4>Sai S. Ravi</h4>
+	</body>
 </html>
