--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="row myBack1 myOutline text-center">
    			<div class="col-2">
-				<img class="img-fluid" src="https://media.licdn.com/dms/image/D5603AQGp1SfbRbuN1g/profile-displayphoto-shrink_200_200/0/1678913078644?e=1687996800&v=beta&t=LH9TtZKw9q_yz2CqSLKtQ_wIs8eAXcrtZ6M90ethh4k" alt="Prof. Patterson"/>
+				<img class="img-fluid" src="https://media.licdn.com/dms/image/C4E03AQGYienU8s8mxQ/profile-displayphoto-shrink_100_100/0/1616863915922?e=1688601600&v=beta&t=34lVEC5baA22NnOJp0yBiXfWiz05VSe1W_oLZWD5Flc" alt="Sai S. Ravi"/>
 			</div>
    			<div class="col-10">
 				<div class="row myBack2">
