--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -21,8 +21,7 @@
 	<div class="container-fluid">
 		<div class="row text-center">
 			<div class="col">
-				<h1>Nested demo</h1>
-				<h2>Currently displaying</h2>
+				<h1>Bootstrap Assignment</h1>
 				<h2><div class="d-block d-sm-none">XS device</div></h2>
 				<h2><div class="d-none d-sm-block d-md-none">SM device</div></h2>
 				<h2><div class="d-none d-md-block d-lg-none">MD device</div></h2>
