--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -11,10 +11,10 @@
     <title>Hello, world!</title>
      <style>
     .myOutline {border:solid black 1px}
-    .myBack1 {background-color: rgb(150,150,200)}
-    .myBack2 {background-color: rgb(150,200,200)}
+    .myBack1 {background-color: rgb(120,150,100)}
+    .myBack2 {background-color: rgb(170,100,190)}
     .myBack3 {background-color: rgb(200,150,200)}
-    .myBack4 {background-color: rgb(200,200,150)}
+    .myBack4 {background-color: rgb(100,90,140)}
     </style>
   </head>
   <body>
@@ -22,12 +22,12 @@
 		<div class="row text-center">
 			<div class="col">
 				<h1>Bootstrap Assignment</h1>
-				<h2><div class="d-block d-sm-none">XS device</div></h2>
-				<h2><div class="d-none d-sm-block d-md-none">SM device</div></h2>
-				<h2><div class="d-none d-md-block d-lg-none">MD device</div></h2>
-				<h2><div class="d-none d-lg-block d-xl-none">LG device</div></h2>
-				<h2><div class="d-none d-xl-block d-xxl-none">XL device</div></h2>
-				<h2><div class="d-none d-xxl-block">XXL device</div></h2>
+				<div class="d-block d-sm-none"></div>
+				<div class="d-none d-sm-block d-md-none"></div>
+				<div class="d-none d-md-block d-lg-none"></div>
+				<div class="d-none d-lg-block d-xl-none"></div>
+				<div class="d-none d-xl-block d-xxl-none"></div>
+				<div class="d-none d-xxl-block"></div>
 			</div>
 		</div>
 		<div class="row myBack1 myOutline text-center">
@@ -36,11 +36,11 @@
 			</div>
    			<div class="col-10">
 				<div class="row myBack2">
-   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-danger">Danger</button>
+   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-add">Add</button>
  </div>
-   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-warning">Warning</button>
+   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-remove">Remove</button>
  </div>
-   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-success">Success</button>
+   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-delete">Delete</button>
  </div>
 				</div>
 			</div>
@@ -53,13 +53,13 @@
 <span class="badge rounded-pill bg-secondary">Secondary</span>
 				</div>
 			<div class="col">
-<span class="badge rounded-pill bg-success">Success</span>
+<span class="badge rounded-pill bg-alternative">Alternative</span>
 		</div>
 			<div class="col">
-<span class="badge rounded-pill bg-danger">Danger</span>
+<span class="badge rounded-pill bg-add">Add</span>
 			</div>
 			<div class="col">
-<span class="badge rounded-pill bg-warning text-dark">Warning</span>
+<span class="badge rounded-pill bg-remove text-dark">Remove</span>
 				</div>
 			<div class="col">
 <span class="badge rounded-pill bg-info text-dark">Info</span>
@@ -73,22 +73,22 @@
 		<div class="row myBack4 myOutline">
 			<div class="col-md-3">
 				<div class="progress">
-					<div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+					<div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="progress">
-					<div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+					<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="progress">
-					<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+					<div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="progress">
-					<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+					<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 				</div>
 			</div>
 		</div>
