--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -36,11 +36,11 @@
 			</div>
    			<div class="col-10">
 				<div class="row myBack2">
-   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-add">Add</button>
+   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-danger">Add</button>
  </div>
-   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-remove">Remove</button>
+   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-warning">Remove</button>
  </div>
-   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-delete">Delete</button>
+   					<div class="col-md-4 myOutline"> <button type="button" class="btn btn-success">Delete</button>
  </div>
 				</div>
 			</div>
