--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<p><a href="css_demo.html">This is a link to the demo file</a></p>
 		<p><a href="font-sample.html">This is a link to the font-sample file</a></p>
 		<p><a href="bootstrap-sample.html">This is a link to the bootstrap-sample file</a></p>
+		<p>Testing changes from Visual Studio</p>
 		<h4>Sai S. Ravi</h4>
 	</body>
 </html>
